# Logpyre

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docker/: compose.yml  env.docker
src/: form.py  format2json.py  main.py
src/logpyre/: app.py  config.py
src/logpyre/elastic/: client.py  formats.py  index.py  projects.py  search.py
src/logpyre/ingest/: models.py  parser.py  pipeline.py  request_classifier.py
src/logpyre/ingest/parsers/: base.py  combined.py  json_log.py
src/logpyre/ingest/parsers/nginx_combined/: README.md
src/logpyre/ingest/parsers/nginx_json/: README.md
src/logpyre/static/css/: index.css
src/logpyre/templates/: 404.html  500.html  base.html  index.html  upload.html
src/logpyre/web/: forms.py  routes.py
src/templates/: 404.html  500.html  base.html  index.html  upload.html
tests/: conftest.py
tests/ingest/: test_combined_parser.py  test_json_log_parser.py  test_parser_dispatcher.py
tests/ingest/parsers/nginx_combined/: test_parser.py
tests/ingest/parsers/nginx_json/: test_parser.py
